# Thesis

./: .gitignore  CMakeLists.txt  imgui.ini
.VSCodeCounter/2022-10-24_11-48-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-26_03-01-30/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-26_20-04-37/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-30_20-55-27/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-30_20-56-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-30_20-56-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-10-30_20-56-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2022-10-30_22-18-35/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-06_13-03-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-06_13-38-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-06_15-53-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-06_15-53-39/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-06_19-10-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-12_22-43-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-15_12-34-59/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-18_10-52-52/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-20_12-12-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-20_14-35-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-22_14-54-13/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-26_16-22-01/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-02_21-45-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-11_14-42-44/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-15_11-28-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-21_09-08-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-24_00-57-07/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-25_19-40-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
UML/: Main.mdj
assets/models/: 2bonk.mtl  AK47.mtl  material.lib
src/: Thesis.cpp  main.cpp  memory_mger.h  pch.h  thesis.h
src/app/: app.cpp  app.h  application.cpp  application.h  debug_window.cpp  debug_window.hpp
src/ecs/: ecs_base.hpp  ecs_base_old.h  ecs_rendering.hpp  rendering_ecs.hpp
src/engine/: camera.hpp
src/engine/data/: resource_base.hpp  resources_vulkan.hpp
src/sdl/: sdl-base.cpp  sdl-base.h  sdl_base.cpp  sdl_base.h
src/vk/: vulkan-base.h  vulkan-instance.cpp  vulkan_base.h  vulkan_commands.cpp  vulkan_depth.cpp  vulkan_descriptors.cpp  vulkan_device.cpp  vulkan_images.cpp  vulkan_instance.cpp  vulkan_model.cpp  vulkan_pipeline.cpp  vulkan_types.hpp
src/vk/backend/: vulkan_base.hpp  vulkan_device.cpp  vulkan_system_context.cpp  vulkan_types.hpp
src/vk/shaders/: compile_shaders.bat  frag.spv  triangle copy.frag  triangle.frag  triangle.vert  vert.spv
tests/: CMakeLists.txt
